-Added an in-game editor based on the original game's editor code (requires EditorIcons.png asset) (@ds-sloth)
-Added config option to show the current episode's title onscreen (@ds-sloth)
-Fixed the clipped render of the Roto-Disk's effect (@Wohlstand)
-Fixed the lock/star sign behavior at locked two-way warps: now they work correctly at the opposite side (@Wohlstand)

Changes for 1.3.5.3-1
-Fixed autostart events behaviour

Changes for 1.3.5.3
-Fixed the vanilla crash: Attempting to freeze any Pokey segments when they have the "noiceball=0" option set will cause the out-of-range error with NPC-ID=-3 in a random moment. (https://github.com/Wohlstand/TheXTech/issues/220)
-Changed the user directory location for macOS-built games into the "~/TheXTech Games/<bundle name without .app suffix>/" to avoid conflict between different games ran on the same device.
-Changed the debug assets location on macOS into "~/TheXTech Games/Debug Assets/" to simplify the debug environment installation.
-Fixed BGO-65, Bowser III, and rail platforms compatibility with SMBX build version up to 30
-Fixed the false positive that enables the Yoshi Mode of music when a player actually doesn't ride any Yoshi
-Mario and Luigi will be only available at episodes built with SMBX older than build version 30 (the first version that introduces Peach, Toad, and Link)
-Fixed the invalid vertical offset while drawing a playable character sprite
-Resolved the old jittering problem when drawing a playable character while moving the camera (thanks to @ds-sloth for the fix)
-Fixed the minor graphical distortion of a playable character that appears while flying up and down with a shoe.
-The last played episode will be reminded and scrolled at the episode selection menu
-Improved episodes menu control: added mouse wheel, page-up/page-down/home/end/delete, and left/right/alt-run/alt-jump/drop on controllers to scroll episodes lists