@@ -24,6 +24,7 @@ Changelog for 1.3.6 [WIP]
 -Added config option to show the current episode's title onscreen (@ds-sloth)
 -Fixed the clipped render of the Roto-Disk's effect (@Wohlstand)
 -Fixed the lock/star sign behavior at locked two-way warps: now they work correctly at the opposite side (@Wohlstand)
+-Added an ability to set a different path for the user directory by command line argument (@Wohlstand)
 
 Changes for 1.3.5.3-1
 -Fixed autostart events behaviour
